# case5

./: .gitignore  Dockerfile.service  README.md  docker-compose.yml  graph_rag.py  main.py  pyproject.toml  requirements.txt  test_api.py
.work/: PCR-1607759_review.json
autoreview.egg-info/: SOURCES.txt  top_level.txt
botapp/: config.py  (+7 more)
uploads/ai-talent-hack1-20250909-220408/case5/: pyproject.toml
uploads/ai-talent-hack1-20250909-220408/case5/.work/: PCR-1607759_review.md
uploads/ai-talent-hack1-20250909-220408/case5/.work/PCR-1607759/project/ono-tebe-nado-fd-main/: index.html
uploads/ai-talent-hack1-20250909-220408/case5/app/: main.py
uploads/ai-talent-hack1-20250909-220408/case5/app/api/routes/: health.py  review.py
uploads/ai-talent-hack1-20250909-220408/case5/app/core/: config.py  logging.py
uploads/ai-talent-hack1-20250909-220408/case5/app/schemas/: review.py
uploads/ai-talent-hack1-20250909-220408/case5/app/services/: review_service.py
uploads/ai-talent-hack1-20250909-220408/case5/autoreview/: aggregator.py  cli.py  github_reader.py  indexer.py  prompts.py  yandex_client.py  yandex_embeddings.py
uploads/ai-talent-hack1-20250909-220408/case5/autoreview.egg-info/: PKG-INFO  entry_points.txt  requires.txt
uploads/ai-talent-hack1-20250909-220408/case5/data/reviewed/отправленные на доработку/PCR-1607759/: [1] Проектная работа «Оно тебе надо».html  Ревью кода ученика.html
uploads/ai-talent-hack1-20250909-220408/case5/data/reviewed/отправленные на доработку/PCR-1629924/: [3] Проектная работа «Сложно сосредоточиться».html  Ревью кода ученика.html
(+57 files in other folders)
